feat: improve landing page visuals and text

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -49,12 +49,6 @@
 
   <!-- ════════════ Hero ════════════ -->
   <section class="hero">
-    <div class="aurora">
-      <div class="aurora-orb orb-1"></div>
-      <div class="aurora-orb orb-2"></div>
-      <div class="aurora-orb orb-3"></div>
-    </div>
-
     <div class="container hero-container">
       <div class="hero-badge anim-hero" style="--d:0">
         <span class="badge-dot"></span>
@@ -312,10 +306,10 @@
 
         <div class="feature-card reveal reveal-delay-3">
           <div class="feature-icon">
-            <i data-lucide="shield" class="icon"></i>
+            <i data-lucide="bot" class="icon"></i>
           </div>
-          <h3>Approval Workflows</h3>
-          <p>You stay in control. Define trust levels per repo and approve every agent action before it touches your codebase.</p>
+          <h3>Native Codex Integration</h3>
+          <p>First-class support for OpenAI Codex via app-server protocol. Streaming chat, sandbox detection, model discovery, and approval flows — all built in.</p>
         </div>
       </div>
     </div>
