chore: update twitter handle in landing page

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -402,7 +402,7 @@
       <div class="footer-bottom">
         <span>&copy; 2026 Panes. MIT License.</span>
         <div class="footer-legal">
-          <a href="https://twitter.com/wygoralves" target="_blank" rel="noopener">Twitter</a>
+          <a href="https://twitter.com/panesagent" target="_blank" rel="noopener">Twitter</a>
           <a href="https://github.com/wygoralves/panes" target="_blank" rel="noopener">GitHub</a>
         </div>
       </div>
