--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -284,7 +284,7 @@
 
         <!-- Claude Code -->
         <a href="https://docs.anthropic.com/en/docs/claude-code" target="_blank" rel="noopener" class="integration-card">
-          <div class="integration-icon" style="color: #d97706;">
+          <div class="integration-icon">
             <!-- Anthropic logomark -->
             <svg viewBox="0 0 24 24" width="32" height="32" fill="currentColor"><path d="M13.827 3.52h3.603L24 20.48h-3.603l-6.57-16.96zm-7.258 0h3.767L16.906 20.48h-3.674l-1.343-3.461H5.017l-1.344 3.46H0L6.57 3.522zm1.94 5.027-2.2 5.698h4.404l-2.203-5.698z"/></svg>
           </div>
@@ -296,9 +296,9 @@
 
         <!-- Gemini CLI -->
         <a href="https://github.com/google-gemini/gemini-cli" target="_blank" rel="noopener" class="integration-card">
-          <div class="integration-icon" style="color: #4285f4;">
-            <!-- Gemini logomark -->
-            <svg viewBox="0 0 24 24" width="32" height="32" fill="currentColor"><path d="M12 0C5.376 0 0 5.376 0 12s5.376 12 12 12 12-5.376 12-12S18.624 0 12 0zm0 2.4A9.58 9.58 0 0 1 21.6 12c0 .36-.024.708-.06 1.056A11.36 11.36 0 0 0 12 7.2a11.36 11.36 0 0 0-9.54 5.856A9.576 9.576 0 0 1 2.4 12 9.58 9.58 0 0 1 12 2.4zM12 21.6A9.58 9.58 0 0 1 2.4 12c0-.36.024-.708.06-1.056A11.36 11.36 0 0 0 12 16.8a11.36 11.36 0 0 0 9.54-5.856c.036.348.06.696.06 1.056A9.58 9.58 0 0 1 12 21.6z"/></svg>
+          <div class="integration-icon">
+            <!-- Gemini sparkle -->
+            <svg viewBox="0 0 100 100" width="28" height="28" fill="currentColor"><path d="M50 0C50 25 75 50 100 50C75 50 50 75 50 100C50 75 25 50 0 50C25 50 50 25 50 0Z"/></svg>
           </div>
           <div class="integration-info">
             <span class="integration-name">Gemini CLI</span>
@@ -308,9 +308,9 @@
 
         <!-- Kiro -->
         <a href="https://kiro.dev" target="_blank" rel="noopener" class="integration-card">
-          <div class="integration-icon" style="color: #6366f1;">
-            <!-- AWS-style K icon -->
-            <svg viewBox="0 0 24 24" width="32" height="32" fill="currentColor"><path d="M12 2L2 7v10l10 5 10-5V7L12 2zm0 2.18l7.12 3.56L12 11.3 4.88 7.74 12 4.18zM4 8.9l7 3.5v7.7l-7-3.5V8.9zm9 11.2v-7.7l7-3.5v7.7l-7 3.5z"/></svg>
+          <div class="integration-icon">
+            <!-- Kiro logomark -->
+            <svg viewBox="0 0 20 24" width="28" height="34" fill="currentColor"><path d="M3.80081 18.5661C1.32306 24.0572 6.59904 25.434 10.4904 22.2205C11.6339 25.8242 15.926 23.1361 17.4652 20.3445C20.8578 14.1915 19.4877 7.91459 19.1361 6.61988C16.7244 -2.20972 4.67055 -2.21852 2.59581 6.6649C2.11136 8.21946 2.10284 9.98752 1.82846 11.8233C1.69011 12.749 1.59258 13.3398 1.23436 14.3135C1.02841 14.8733 0.745043 15.3704 0.299833 16.2082C-0.391594 17.5095 -0.0998802 20.021 3.46397 18.7186V18.7195L3.80081 18.5661Z"/><path d="M10.9614 10.4413C9.97202 10.4413 9.82422 9.25893 9.82422 8.55407C9.82422 7.91791 9.93824 7.4124 10.1542 7.09197C10.3441 6.81003 10.6158 6.66699 10.9614 6.66699C11.3071 6.66699 11.6036 6.81228 11.8128 7.09892C12.0511 7.42554 12.177 7.92861 12.177 8.55407C12.177 9.73591 11.7226 10.4413 10.9616 10.4413H10.9614Z" fill="black"/><path d="M15.0318 10.4413C14.0423 10.4413 13.8945 9.25893 13.8945 8.55407C13.8945 7.91791 14.0086 7.4124 14.2245 7.09197C14.4144 6.81003 14.6861 6.66699 15.0318 6.66699C15.3774 6.66699 15.6739 6.81228 15.8831 7.09892C16.1214 7.42554 16.2474 7.92861 16.2474 8.55407C16.2474 9.73591 15.793 10.4413 15.0319 10.4413H15.0318Z" fill="black"/></svg>
           </div>
           <div class="integration-info">
             <span class="integration-name">Kiro</span>
@@ -320,8 +320,8 @@
 
         <!-- OpenCode -->
         <a href="https://opencode.ai" target="_blank" rel="noopener" class="integration-card">
-          <div class="integration-icon" style="color: #10b981;">
-            <i data-lucide="code-2" style="width:28px;height:28px;stroke-width:2.5;"></i>
+          <div class="integration-icon">
+            <svg viewBox="0 0 240 300" width="28" height="35" fill="currentColor"><path d="M180 240H60V120H180V240Z" opacity="0.4"/><path d="M180 60H60V240H180V60ZM240 300H0V0H240V300Z"/></svg>
           </div>
           <div class="integration-info">
             <span class="integration-name">OpenCode</span>
@@ -331,8 +331,8 @@
 
         <!-- Kilo Code -->
         <a href="https://kilocode.ai" target="_blank" rel="noopener" class="integration-card">
-          <div class="integration-icon" style="color: #ec4899;">
-            <i data-lucide="cpu" style="width:28px;height:28px;stroke-width:2;"></i>
+          <div class="integration-icon">
+            <svg viewBox="0 0 32 32" width="28" height="28" fill="currentColor"><path d="M23,26v-2h3v-5l-2-2h-4v2h-3v5l2,2h4ZM20,20h3v3h-3v-3Z"/><rect x="12" y="17" width="3" height="3"/><polygon points="26 12 23 12 23 9 20 6 17 6 17 9 20 9 20 12 17 12 17 15 26 15 26 12"/><path d="M0,0v32h32V0H0ZM29,29H3V3h26v26Z"/><polygon points="15 26 15 23 9 23 9 17 6 17 6 23.1875 8.8125 26 15 26"/><rect x="12" y="6" width="3" height="3"/><polygon points="9 12 12 12 12 15 15 15 15 12 12 9 9 9 9 6 6 6 6 15 9 15 9 12"/></svg>
           </div>
           <div class="integration-info">
             <span class="integration-name">Kilo Code</span>
@@ -342,8 +342,9 @@
 
         <!-- Factory Droid -->
         <a href="https://factory.ai" target="_blank" rel="noopener" class="integration-card">
-          <div class="integration-icon" style="color: #8b5cf6;">
-            <i data-lucide="bot" style="width:28px;height:28px;stroke-width:2;"></i>
+          <div class="integration-icon">
+            <!-- Factory pinwheel -->
+            <svg viewBox="0 0 200 200" width="28" height="28" fill="currentColor"><g transform="translate(0,200) scale(0.1,-0.1)"><path d="M730 1667c-13-7-36-30-52-52-30-45-89-193-108-273-6-28-15-54-19-57-5-2-32 5-61 16-73 28-129 23-150-13-13-25-13-34 3-95 9-38 43-120 75-183 31-63 57-118 57-123 0-5-27-23-59-40-77-41-102-73-85-110 23-50 128-106 283-151 47-14 90-27 95-31 6-3 2-29-10-62-22-64-25-123-7-141 18-18 98-14 163 8 32 11 100 42 153 70 52 27 100 50 106 50 7 0 17-15 24-34 7-18 26-52 42-75 73-100 147-24 229 234 18 55 35 103 39 107 4 4 36-2 71-12 34-11 73-20 86-20 88 0 67 153-49 359-20 34-36 68-36 75 0 7 22 23 49 35 177 84 123 167-169 262-63 20-115 40-115 45 0 5 9 39 19 76 11 38 16 78 12 93-17 66-120 52-306-42-68-35-127-63-130-63-3 0-19 27-34 61-25 52-66 99-85 99-3 0-17-6-31-13zm448-145c2-12-4-46-13-75-30-94-138-337-149-337-6 0-34 78-63 173-42 141-49 174-38 185 7 8 50 29 96 48 101 41 162 43 167 6zm-390-64c40-68 155-354 147-368-4-6-35 6-78 30-40 23-112 61-161 86-88 45-88 46-83 79 7 45 70 178 96 204 31 31 44 26 79-31zm543-87c77-26 130-55 158-85 20-22 22-28 11-42-32-37-395-193-412-176-5 5 7 37 30 78 21 38 60 108 86 157 26 48 53 87 60 87 7 0 37-8 67-19zm-715-227c140-52 269-112 269-125 0-7-74-34-174-64l-174-52-39 83c-43 93-60 180-37 195 17 10 42 5 155-37zm879-115c38-80 61-168 51-194-10-27-77-13-224 46-162 66-227 98-216 109 5 4 63 24 129 44 66 19 138 42 160 50 22 8 46 15 53 15 7 1 28-31 47-70zm-583-95c4-3-11-36-31-72-21-37-60-109-87-159-27-51-55-93-62-93-7 0-48 14-91 30-89 34-158 87-148 113 8 20 116 76 272 138 122 49 137 53 147 43zm318-100c88-48 160-90 160-94 0-16-39-119-63-167-28-54-61-85-82-77-19 8-69 107-130 259-52 128-63 165-50 165 3 0 78-39 165-86zm-221 4c8-29 31-106 51-171 32-99 36-120 24-131-21-21-158-76-207-82-79-11-80 22-2 215 63 159 94 221 108 221 8 0 19-22 26-52z"/></g></svg>
           </div>
           <div class="integration-info">
             <span class="integration-name">Factory Droid</span>
