chore: more stylization changes to the lp

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Panes — The Agent Development Environment</title>
+  <title>Panes | The Agent Development Environment</title>
   <meta name="description" content="Panes is the open-source ADE. Orchestrate any AI coding agent, native terminal, and git workflow in one hyper-fast desktop cockpit. Built with Rust.">
-  <meta property="og:title" content="Panes — The Agent Development Environment">
+  <meta property="og:title" content="Panes | The Agent Development Environment">
   <meta property="og:description" content="The open-source ADE for developers. Orchestrate AI agents, git, and terminal in one cockpit. Built with Rust and Tauri.">
   <meta property="og:type" content="website">
   <link rel="icon" href="logo.svg" type="image/svg+xml">
@@ -439,12 +439,12 @@
   <!-- ════════════ ADE Context ════════════ -->
   <section class="ade-context" id="ade">
     <div class="container">
+      <div style="text-align:center;margin-bottom:48px;"><span class="section-label">The shift</span></div>
       <div class="ade-context-inner reveal">
         <div class="ade-context-text">
-          <div class="section-label">The shift</div>
           <h2 class="ade-context-title">The IDE is dead.<br><span class="ade-dim">Long live the ADE.</span></h2>
           <p class="ade-context-body">
-            The IDE was built for a world where you wrote every line. That world is gone. Today, agents write the code &mdash; and you orchestrate, review, and approve. Panes is built for this new reality: a cockpit designed around AI-first workflows, not bolted onto an editor.
+            The IDE was built for a world where you wrote every line. That world is gone. Today, agents write the code and you orchestrate, review, and approve. Panes is built for this new reality: a cockpit designed around AI-first workflows, not bolted onto an editor.
           </p>
         </div>
         <div class="ade-context-visual">
