chore: more styling changes to the LP

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -8,6 +8,7 @@
   <meta property="og:title" content="Panes | The Agent Development Environment">
   <meta property="og:description" content="The open-source ADE for developers. Orchestrate AI agents, git, and terminal in one cockpit. Built with Rust and Tauri.">
   <meta property="og:type" content="website">
+  <meta property="og:url" content="https://panesade.com">
   <link rel="icon" href="logo.svg" type="image/svg+xml">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
