chore: adjust some landing copy

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -57,7 +57,7 @@
       </h1>
 
       <p class="hero-subtitle anim-hero" style="--d:3">
-        Say goodbye to the IDE. Orchestrate any AI agent, native terminal, and git workflow in a single hyper-fast open-source desktop cockpit.
+        One desktop app for AI agents, terminal, and git. Open source, built with Rust, fast enough to stay out of your way.
       </p>
 
       <div class="hero-actions anim-hero" style="--d:5">
@@ -443,9 +443,9 @@
       <div style="text-align:center;margin-bottom:48px;"><span class="section-label">The shift</span></div>
       <div class="ade-context-inner reveal">
         <div class="ade-context-text">
-          <h2 class="ade-context-title">The IDE is dead.<br><span class="ade-dim">Long live the ADE.</span></h2>
+          <h2 class="ade-context-title">From IDE<br><span class="ade-dim">to ADE.</span></h2>
           <p class="ade-context-body">
-            The IDE was built for a world where you wrote every line. That world is gone. Today, agents write the code and you orchestrate, review, and approve. Panes is built for this new reality: a cockpit designed around AI-first workflows, not bolted onto an editor.
+            IDEs were designed for writing code. But increasingly, agents write the code and you orchestrate, review, and approve. Panes is built for that workflow: agent chat, git, terminal, and approvals in one place — not bolted onto an editor.
           </p>
         </div>
         <div class="ade-context-visual">
@@ -484,7 +484,7 @@
     <div class="container">
       <div class="section-header reveal">
         <div class="section-label">How it works</div>
-        <h2 class="section-title">Three steps to liftoff.</h2>
+        <h2 class="section-title">Up and running in minutes.</h2>
       </div>
 
       <div class="steps">
@@ -514,8 +514,8 @@
     <div class="cta-bg"></div>
     <div class="container">
       <div class="cta-content reveal">
-        <h2 class="cta-title">Ready to take command?</h2>
-        <p class="cta-subtitle">Join developers shifting from IDEs to ADEs. Free, open-source, forever.</p>
+        <h2 class="cta-title">Try Panes</h2>
+        <p class="cta-subtitle">Free, open-source, MIT licensed. Download and open a folder to get started.</p>
         <div class="cta-actions">
           <a href="https://github.com/wygoralves/panes/releases/latest" class="btn-primary" id="cta-download">
             <svg class="os-icon" viewBox="0 0 24 24" fill="currentColor"><path d="M18.71 19.5c-.83 1.24-1.71 2.45-3.05 2.47-1.34.03-1.77-.79-3.29-.79-1.53 0-2 .77-3.27.82-1.31.05-2.3-1.32-3.14-2.53C4.25 17 2.94 12.45 4.7 9.39c.87-1.52 2.43-2.48 4.12-2.51 1.28-.02 2.5.87 3.29.87.78 0 2.26-1.07 3.81-.91.65.03 2.47.26 3.64 1.98-.09.06-2.17 1.28-2.15 3.81.03 3.02 2.65 4.03 2.68 4.04-.03.07-.42 1.44-1.38 2.83M13 3.5c.73-.83 1.94-1.46 2.94-1.5.13 1.17-.34 2.35-1.04 3.19-.69.85-1.83 1.51-2.95 1.42-.15-1.15.41-2.35 1.05-3.11z"/></svg>
